<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TelaCadastro"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt_novoEmail"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:hint="@string/edt_cadEmail"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edt_novaSenha"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_cadaSenha"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edt_Nome"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/edt_novoNome"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edt_novaIdade"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_cadIdade"
        android:layout_marginTop="20dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn_cadastrar"
        style="@style/botao"
        android:text="@string/btn_salvar"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"  />

    <Button
        android:id="@+id/btn_voltar"
        style="@style/botao"
        android:text="@string/btn_voltar"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"  />
</LinearLayout>